dials_research.log
*** Error compiling 'dials_research/command_line/filter_spots_per_image.py'...
  File "dials_research/command_line/filter_spots_per_image.py", line 23
    print unique_z
                 ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int unique_z)?

*** Error compiling 'dials_research/command_line/magic_filter.py'...
  File "dials_research/command_line/magic_filter.py", line 20
    print len(reflections)
            ^
SyntaxError: invalid syntax

*** Error compiling 'dials_research/command_line/multi_index.py'...
  File "dials_research/command_line/multi_index.py", line 126
    except Sorry, e:
                ^
SyntaxError: invalid syntax

